# wisec-analyzer

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
out_4sics/: 2025-01-31-AgentTesla-style-data-exifil-over-FTP_bins.csv  2025-01-31-AgentTesla-style-data-exifil-over-FTP_report.txt  4SICS-GeekLounge-151020_report.txt  4SICS-GeekLounge-151022_report.txt
wisec_analyzer/: cli.py  core.py  models.py  reporting.py
wisec_analyzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
